--- a/app/views/pages/portal.html.haml
+++ b/app/views/pages/portal.html.haml
@@ -69,11 +69,12 @@
             %div
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/icon_challenges.png"
               %h3 Challenges
-        = link_to sandbox_group_url(@group) do
+        = link_to "#" do
           .option
-            %div
+            %div{ style: "cursor: default; opacity: 0.7;"}
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/icon_api.png"
               %h3 Search
+              %h5 Coming Soon...
     
 
         
