--- a/app/views/evaluations/show.html.haml
+++ b/app/views/evaluations/show.html.haml
@@ -6,7 +6,7 @@
   [data-tip]:before { left: 4px; }
   [data-tip]:after { left: -50px; }
   .no_data [data-tip]:after { width: 180px; height: 56px; top: -73px; white-space: normal;}
-
+  .body tbody tr:hover { background-color: #EEE; }
 
 #evaluation_manager.aboutcontainer
   %div.aboutbox{ style: "background-color: white; padding:8px;" }
