--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -1,6 +1,6 @@
 :css
   body { background-image: none; background-color: white;}
-  h1 { text-align: center; font-size: 4.5em; line-height: 1.25em; padding-bottom: 34px; }
+  .hero h1 { text-align: center; font-size: 4.5em; line-height: 1.25em; padding-bottom: 34px; }
   h3 {  color: #8a8d99;}
   .container{ float: none; width: 980px; margin: 0 auto;}
   .container.body { width: 100% !important; padding: 0 !important; margin-top: 40px; }
