--- a/app/views/evaluations/index.html.haml
+++ b/app/views/evaluations/index.html.haml
@@ -11,6 +11,7 @@
   .aboutbox table { width: 100%; }
   .aboutbox table td { padding: 15px 10px; border-bottom: 1px solid #DDD; line-height: 25px;}
   .aboutbox table td a { font-size: 17px; color: #333; }
+  .evaluations tr:hover { background-color: #EEE; }
 
 :javascript
   function compare_and_search(){
