--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -1,94 +1,16 @@
 :css
   body { background-image: none; background-color: white;}
-  h1 { text-align: center; font-size: 4.5em; line-height: 1.25em; padding-bottom: 34px; }
-  h3 {  color: #8a8d99;}
-  .container{ float: none; width: 980px; margin: 0 auto;}
   .container.body { width: 100% !important; padding: 0 !important; margin-top: 40px; }
-  p.speech {
-    color: #404040;
-    position: relative;
-    width: 230px;
-    padding: 15px; 
-    text-align: center;
-    background-color: #fff;
-    border: 8px solid #666;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    border-radius: 30px;
-    margin-bottom: 50px;
-  }
-  p.speech.left:before {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    left: 101px;
-    top: 102px;
-    border: 25px solid;
-    border-color: #666 transparent transparent #666;
-  }
-  p.speech.left:after {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    left: 110px;
-    top: 102px;
-    border: 15px solid;
-    border-color: #fff transparent transparent #fff;
-  }
-  p.speech.right:before {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    right: 110px;
-    top: 102px;
-    border: 25px solid;
-    border-color: #666 #666 transparent transparent;
-  }
-  p.speech.right:after {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    right: 118px;
-    top: 102px;
-    border: 15px solid;
-    border-color: #fff #fff transparent transparent;
-  }
-  p.speech.center:before {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    right: 85px;
-    top: 102px;
-    border: 48px solid;
-    border-color: #666 transparent transparent transparent;
-  }
-  p.speech.center:after {
-    content: ' ';
-    position: absolute;
-    width: 0;
-    height: 0;
-    right: 99px;
-    top: 102px;
-    border: 34px solid;
-    border-color: #fff transparent transparent transparent;
-  }
-
   
 :javascript
   function goto(id, t){
     $("#holder3").animate({"left": -($(id).position().left)}, 600);  
   }
-
   
-#upheaval
-  #holder1{ style: "width: 980px; margin: 0 auto;"}
-    #holder2.row-fluid{ style: "overflow: hidden;"}
-      #holder3{ style: "position: relative; left: 0;width: 3000px; height: 100%;"}
+#landing
+  #holder1
+    #holder2.row-fluid
+      #holder3
         #main_slide
           .span7
             .hero
@@ -98,18 +20,18 @@
                 Be discovered.
               %h3 We believe that people should be hired on the basis of what they can actually do.
             .triangle
-          .span5{ style: "height: 286px; margin-left: 0;" }
+          .span5
             .row-fluid.consumer
               .option
-                %h4{ style: "font-size: 1.6em; margin-bottom: 10px; color: white;"} I want to be discovered.
-                %p{ style: "font-size: 15px; "} MetaBright is the game that can get you a job. Compete against others as you improve together.
-                %button.button{ style: "float: right; background-color: rgb(231, 231, 231);"}
+                %h4 I want to be discovered.
+                %p MetaBright is the game that can get you a job. Compete against others as you improve together.
+                %button.button
                   %a{:href => "#", :onclick => "goto('#consumer_slide', this); return false"} Get Started
             .row-fluid.employer
               .option
-                %h4{ style: "font-size: 1.6em; margin-bottom: 10px; color: white; "} I want better candidates.
-                %p{ style: "font-size: 15px; "} The MetaBright Evaluator validates the skills of your job candidates before you interview them.
-                %button.button{ style: "float: right; background-color: rgb(231, 231, 231);"}
+                %h4 I want better candidates.
+                %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
+                %button.button
                   = link_to "Learn More", evaluator_path
         #consumer_slide
           .span12
@@ -119,16 +41,15 @@
                 %li
                   %div{ "data-tip" => "Take the #{path.name} Challenge!" }
                     = link_to intro_path(c: path.permalink) do
-                      = image_tag path.picture, style: "display:inline;", alt: "#{path.name}"
-            %a{:href => "#", :style => "float: left;", :onclick => "goto('#main_slide', this); return false"} Back
-            %a.explore_link{ style: "float: right;"} View more Challenges
+                      = image_tag path.picture, alt: "#{path.name}"
+            %a{:href => "#", class: "back", :onclick => "goto('#main_slide', this); return false"} Back
   #happy_users.row-fluid
     .container
       .span12
-        %div{ style: "margin:10px auto; padding: 10px 0; color: white;" }
+        .holder
           .body
             .testimonial
-              .speech
+              %div
                 %p.speech.right "Talk about a time saver. MetaBright is a great talent screener. I never have to wonder if someone has the skills necessary to do the job."
               %div
                 .bio
@@ -139,8 +60,8 @@
                 .picture
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/nisa.jpg", class: "img-circle"
             .testimonial
-              .speech
-                %p.speech.center{ style: "margin: 0 auto 50px;"} "MetaBright's approach to assessing an individual's strengths and weaknesses brings a whole new level of analytical riguor to hiring."
+              %div
+                %p.speech.center "MetaBright's approach to assessing an individual's strengths and weaknesses brings a whole new level of analytical riguor to hiring."
                 %div
                   .bio
                     %p 
@@ -150,8 +71,8 @@
                   .picture
                     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/val.jpg", class: "img-circle"
             .testimonial
-              .speech
-                %p.speech.left{ style: "float: right; "} "MetaBright Challenges are a blast. I love that as I compete on MetaBright, I'm validating my professional credentials."
+              %div
+                %p.speech.left "MetaBright Challenges are a blast. I love that as I compete on MetaBright, I'm validating my professional credentials."
               %div
                 .bio
                   %p 
@@ -163,9 +84,9 @@
           
   #challenge_showcase.row-fluid
     .container
-      .span12{ style: "margin:10px auto; height: 200px; padding: 10px 0; text-align: center; " }
+      .span12
         .header
-          %h3{ style: "color: inherit;"} Show the world what you know with MetaBright Challenges
+          %h3 Show the world what you know with MetaBright Challenges
         .body
           .carousel
             .left_scroll{ onclick: "landing_slide('left');"}
@@ -178,13 +99,9 @@
                       .details
                         %h4= truncate(path.name,length: 14, separator: ' ')
                         %h5 Try this Challenge!
-                    %div{ style: "text-align: left;"}
-                      - if current_user
-                        = link_to intro_path(c: path.permalink) do
-                          = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
-                      - else                  
-                        = link_to challenge_url(path.permalink) do
-                          = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
+                    .background
+                      = link_to intro_path(c: path.permalink) do
+                        = image_tag path.picture, class: "mosaic-backdrop", size: "110x110", alt: "#{path.name}"
                   
                 
             .right_scroll{ onclick: "landing_slide('right');"}
