small style edits to checkout conf

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1677,7 +1677,7 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
     }
   }
   .invite_box{
-    text-align: center; margin: 20px 20px 30px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
+    text-align: center; margin: 20px 20px; border: 4px solid $employer_green; border-radius: 4px; background-color: $employer_green_light;
     
     div {
       display: inline-block; 
