--- a/app/views/groups/signup/order_confirmation.html.haml
+++ b/app/views/groups/signup/order_confirmation.html.haml
@@ -11,6 +11,7 @@
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       .text{ style: ""}
         %h1{ style: "margin-top:0;" } Welcome to MetaBright!
+    %hr{ style: "margin: 0 0 10px;"}
     - if false and @group.can_add_users?
       .invite_box
         %div
