--- a/app/views/groups/signup/order_confirmation.html.haml
+++ b/app/views/groups/signup/order_confirmation.html.haml
@@ -47,4 +47,4 @@
             Details of your company plan and settings are located here. You can invite additional people to your account, change your plan, and even add custom CSS styles to your Evaluations.
             %div{ style: "margin: 15px 10px 20px 0;"}
               = link_to "Manage your account", account_group_url(@group), class: "submit_button", style: "float: inherit;"
-      %p If you need help getting going, have a question, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
+      %p If you need help getting going, or you just want to talk, feel free to contact our support team at #{link_to "support@metabright.com", "mailto:support@metabright.com"}. We're here to help!
