--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -979,6 +979,18 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
       }
       .control-group {
         margin: 0;
+        
+        .back {
+          float: left;
+          
+          img {
+            height: 32px; 
+            opacity: .7;
+            
+            &:hover { opacity: 1; }
+          }
+        }
+        .submit_button { width: inherit; }
       }
       .checkout_tt1, .checkout_tt2 {
         display: inline-block;
