code editor only display when template in place

--- a/app/views/groups/close_confirmation.html.haml
+++ b/app/views/groups/close_confirmation.html.haml
@@ -33,5 +33,8 @@
           %li All your company's Evaluations.
           %li All records of people having completed your company's Evaluations.
           %li All of your company's custom Challenges.
-      %p We're genuinely sorry it didn't work out. If you left us feedback, thank you. We'll be sure to read what you wrote and do our best to improve. 
+      %p 
+        We're genuinely sorry it didn't work out. If you left us feedback, thank you. We'll be sure to read what you wrote and do our best to improve. If you'd like to speak to the founders personally, we can be reached at
+        %a{href:"mailto:founders@metabright.com"} founders@metabright.com.
+        
       
