--- a/app/views/groups/signup/checkout.html.haml
+++ b/app/views/groups/signup/checkout.html.haml
@@ -28,7 +28,7 @@
         = form_for(@group, url: checkout_group_url(@group), remote: true, html: { class: "form-horizontal", id: "new_subscription" }) do |f|
           - plan = Group::PLAN_TYPES[@group.plan_type]
           = f.hidden_field :stripe_token
-          %label Product:
+          %label Product
           .product_name Evaluator #{plan[:description]}: #{plan[:price]}
           %p.errors= @error
           %label{ style: "display: inline-block;"} Card Number
