--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,7 +4,7 @@
 = stylesheet_link_tag "application"
 = javascript_include_tag "application"
 
-- if params[:action] == "checkout"
+- if params[:controller] == "groups" and params[:action] == "new"
   = javascript_include_tag "https://js.stripe.com/v2/"
   %meta{ name: "stripe:key", content: STRIPE_PUBLIC_KEY }
  
