touchup on checkout form

--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -28,6 +28,7 @@
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
       %div{ style: "display: inline-block; vertical-align: top; margin-top: 31px;"}
         %h1{ style: "margin-top:0;" } MetaBright Evaluator
+        %h3 Order Checkout
     .body{ style: "padding: 0 16px;" }
       = form_for(@new_group, html: { class: "form-horizontal" }, remote: true) do |f|
         - plan = Group::PLAN_TYPES[@new_group.plan_type]
@@ -45,17 +46,19 @@
         = f.text_field :creator_email, placeholder: "Email...", "data-label" => "your email"
         %label Create a password:
         = f.password_field :creator_password, placeholder: "Password...", "data-label" => "your password"
-        %label{ style: "display: inline-block;"} Card Number
-        .checkout_tt1
-          %div{ "data-tip" => "We accept Visa, Mastercard, American Express, Discover, and JCB."}
-            %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png"}
-        %input{ type: "text", size: 20, data: { stripe: "number", label: "card number" }, style: "width: 24ex;" }
-        %div
-          %label{ style: "display: inline-block;"} CVC
-          .checkout_tt2
-            %div{ "data-tip" => "Your Card Verification Code (CVC) is a 3-digit number printed on the back of your Visa/Mastercard/Discover. It appears just to the right of the signature box. The American Express verification number is 4-digits and printed on the front of the card. It is immediately to the right of your credit card number."}
+        %div{ style: "display: inline-block; width: 64%;"}
+          %label{ style: "display: inline-block;"} Card Number
+          .checkout_tt1
+            %div{ "data-tip" => "We accept Visa, Mastercard, American Express, Discover, and JCB."}
               %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png"}
-        %input{ type: "text", size: 4, maxlength: 4, data: { stripe: "cvc", label: "CVC" }, class: "input-small", style: "width: 3em;" }
+          %input{ type: "text", size: 20, data: { stripe: "number", label: "card number" }, style: "width: 24ex;" }
+        %div{ style: "display: inline-block; "}
+          %div
+            %label{ style: "display: inline-block;"} CVC
+            .checkout_tt2
+              %div{ "data-tip" => "Your Card Verification Code (CVC) is a 3-digit number printed on the back of your Visa/Mastercard/Discover. It appears just to the right of the signature box. The American Express verification number is 4-digits and printed on the front of the card. It is immediately to the right of your credit card number."}
+                %img{src: "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/tooltip_light.png"}
+          %input{ type: "text", size: 4, maxlength: 4, data: { stripe: "cvc", label: "CVC" }, class: "input-small", style: "width: 3em;" }
         %label Expiration (MM/YYYY)
         %input{ type: "text", size: 2, maxlength: 2, data: { stripe: "exp-month", label: "card expiration month" }, placeholder: "MM", class: "input-small", style: "width: 1.5em;" }
         %span /
